<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Labs</string>
    <string name="emailAddress">Enter your email address: </string>
    <string name="typePass">Type your password: </string>
    <string name="emailHint">Enter your email</string>
    <string name="btnAbove">Click the button above to take a picture</string>
    <string name="YourEmail">Your email: </string>
    <string name="pic">Your Picture: </string>
    <string name="EnterYourName">Enter your name: </string>
    <string name="YourName">Your name: </string>
    <string name="YourProfile">Your profile</string>
    <string name="login">Login</string>
    <string name="picContent">Camera Picture</string>
    <string name="goChat">Go to chat</string>
    <string name="sendButton">SEND</string>
    <string name="receiveButton">RECEIVE</string>
    <string name="message">Type here</string>
    <string name="goToolbar">Go to Toolbar</string>
    <string name="icon1">Icon 1</string>
    <string name="icon2">Icon 2</string>
    <string name="icon3">Icon 3</string>
    <string name="about">ABOUT</string>
    <string name="newMessage">What is the new message?</string>
    <string name="typeHere">You can type here</string>
    <string name="testToolbarInitialMessage">This is the initial message</string>
    <string name="testToolbarAction">Go back?</string>
    <string name="testToolbarOverflowMenu">You clicked on the overflow menu</string>
    <string name="testToolbarPositive">Positive</string>
    <string name="testToolbarNegative">Negative</string>
    <string name="testToolbarYes">YES</string>
    <string name="goWeatherForecast">Go to Weather Forecast</string>
    <string name="currTemp">Current temperature is:</string>
    <string name="minTemp">Minimum temperature is:</string>
    <string name="maxTemp">Maximum temperature is:</string>
    <string name="uvRating">UV rating is:</string>
</resources>